--- a/solutions.html
+++ b/solutions.html
@@ -1,36 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productized Solutions - 3N Consulting</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="images/logos/3N Consulting.png>
 </head>
 <body>
     <!-- Navigation Header -->
-    <nav class="navbar">
-        <div class="container">
-            <div class="nav-wrapper">
-                <div class="logo" style="display: flex; align-items: center; gap: 1rem;">
-                    <div>
-                        <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo" class="logo-img" style="height: 90px; width: auto; max-width: 300px;">
-                    </div>
-                    <div style="display: flex; flex-direction: column; line-height: 1.1;">
-                        <div style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">3N Consulting</div>
-                        <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
-                    </div>
+    <nav class=" navbar">
+    <div class="container">
+        <div class="nav-wrapper">
+            <div class="logo" style="display: flex; align-items: center; gap: 1rem;">
+                <div>
+                    <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo" class="logo-img"
+                        style="height: 90px; width: auto; max-width: 300px;">
                 </div>
-                <ul class="nav-links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="careers.html">Careers</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
-                    <li><a href="thought-leadership.html">Meet Our Team</a></li>
-                    <li><a href="toolkit.html">Our Toolkit</a></li>
-                </ul>
+                <div style="display: flex; flex-direction: column; line-height: 1.1;">
+                    <div
+                        style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">
+                        3N Consulting</div>
+                    <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
+                </div>
             </div>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="careers.html">Careers</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="thought-leadership.html">Meet Our Team</a></li>
+                <li><a href="toolkit.html">Our Toolkit</a></li>
+            </ul>
         </div>
+    </div>
     </nav>
 
     <!-- Page Header -->
@@ -46,7 +51,9 @@
         <div class="container">
             <div class="solution-detail" id="manufacturing">
                 <h2>Manufacturing</h2>
-                <p>Our Manufacturing solutions leverage years of operational expertise to help you optimize production, reduce waste, and improve efficiency. From supply chain optimization to lean manufacturing implementation, we deliver rapid results through pre-built frameworks and best practices.</p>
+                <p>Our Manufacturing solutions leverage years of operational expertise to help you optimize production,
+                    reduce waste, and improve efficiency. From supply chain optimization to lean manufacturing
+                    implementation, we deliver rapid results through pre-built frameworks and best practices.</p>
                 <ul>
                     <li>Production Optimization</li>
                     <li>Supply Chain Enhancement</li>
@@ -57,7 +64,9 @@
 
             <div class="solution-detail" id="cio-services">
                 <h2>CIO Services</h2>
-                <p>CIO Services provides executive-level technology leadership and strategy. Whether you need interim IT leadership, technology roadmap development, or digital transformation guidance, our solutions help align technology with business objectives while reducing implementation risk.</p>
+                <p>CIO Services provides executive-level technology leadership and strategy. Whether you need interim IT
+                    leadership, technology roadmap development, or digital transformation guidance, our solutions help
+                    align technology with business objectives while reducing implementation risk.</p>
                 <ul>
                     <li>IT Strategy & Roadmap Development</li>
                     <li>Interim CIO Services</li>
@@ -68,7 +77,9 @@
 
             <div class="solution-detail" id="procurement">
                 <h2>Procurement</h2>
-                <p>Our Procurement solutions help you reduce costs, improve vendor relationships, and streamline processes. With proven methodologies and templates, we can rapidly deploy savings programs, implement strategic sourcing initiatives, and transform your procurement function.</p>
+                <p>Our Procurement solutions help you reduce costs, improve vendor relationships, and streamline
+                    processes. With proven methodologies and templates, we can rapidly deploy savings programs,
+                    implement strategic sourcing initiatives, and transform your procurement function.</p>
                 <ul>
                     <li>Strategic Sourcing</li>
                     <li>Vendor Management Optimization</li>
@@ -119,5 +130,6 @@
     </footer>
 
     <script src="script.js"></script>
-</body>
+    </body>
+
 </html>
