Updated David Mann bio

--- a/david-mann.html
+++ b/david-mann.html
@@ -386,18 +386,14 @@
         </div>
         <div class="bio-section">
           <p>
-            David Mann is an entrepreneurship and growth strategy leader with 25+ years across venture capital, private
-            equity, company-building, and executive education. He serves as Chairman of the Entrepreneurial Operating
-            System (EOS) and is Managing Partner & Co-Founder of both The Firefly Group and Spring Mill Venture
-            Partners. David has sourced, structured, and guided dozens of investments across technology, life sciences,
-            and services, serving on boards and coaching CEOs to translate strategy into repeatable revenue, operating
-            discipline, and measurable results.
-          </p>
-          <p>
-            A former U.S. Navy Supply Corps Officer and White House Liaison to the Secretary of the Navy, David brings
-            operational rigor and mission focus to every engagement. For nearly two decades, he taught in Indiana
-            University's Kelley School of Business MBA program, where he designed and led the Venture Capital &
-            Entrepreneurial Finance course, and he has guest-lectured at Purdue and Notre Dame.
+            David Mann is managing partner of The Firefly Group, a holding company investing in lower middle market
+            businesses. In addition, David co-founded Spring Mill Venture Partners, a venture capital firm, in 2002. He
+            previously served as an adjunct faculty member at Indiana University, Kelley School of Business
+            (Indianapolis). He worked with ServiceMaster Ventures and served as a founding member of the ServiceMaster
+            Home Service Center, a joint venture between Kleiner Perkins and ServiceMaster. David began his career as an
+            officer in the U.S. Navy, serving as a White House Liaison Officer on the staff of the Secretary of the
+            Navy, holding leadership positions on board a nuclear guided-missile cruiser, and working in information
+            systems. David received his M.B.A. from Harvard Business School and B.S. from the U.S. Naval Academy.
           </p>
         </div>
       </div>
