improved testimonial slider, added 5th testimonial

--- a/3_n_homepage_preview (1).html
+++ b/3_n_homepage_preview (1).html
@@ -399,7 +399,7 @@
       text-decoration: underline;
     }
   </style>
-  <link rel="icon" type="image/png" href="images/logos/3N Consulting.png>
+  <link rel="icon" type="image/png" href="images/logos/3N%20Consulting.png">
 </head>
 
 <body>
@@ -572,6 +572,23 @@
               Management Team: “Very Good”<br>
               Cost Control: “Exceptional”<br>
               Schedule Management: “Exceptional”
+            </div>
+          </article>
+
+          <article class="card">
+            <div class="testimonial-client">
+              Public Post Secondary Institution ~ Chief Financial Officer
+            </div>
+            <p class="testimonial-quote">
+              “3N did an excellent assessment of Procurement at our institution and the principal on the project was
+              responsive and open to our feedback. The final report and recommendations were thorough and actionable.”
+            </p>
+            <div class="testimonial-ratings">
+              <strong>Client Satisfaction Survey Rating:</strong><br>
+              Quality of Work: “Exceptional”<br>
+              Management Team: “Exceptional”<br>
+              Cost Control: “Exceptional”<br>
+              Schedule Management: "Very Good"
             </div>
           </article>
         </div>
