--- a/cio-services.html
+++ b/cio-services.html
@@ -389,7 +389,7 @@
       height: auto;
     }
   </style>
-  <link rel="icon" type="image/png" href="images/logos/3N Consulting.png>
+  <link rel="icon" type="image/png" href="images/logos/3N%20Consulting.png">
 </head>
 
 <body>
