--- a/solutions.html
+++ b/solutions.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productized Solutions - 3N Consulting</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="images/logos/3N Consulting.png>
+    <link rel="icon" type="image/png" href="images/logos/3N%20Consulting.png">
 </head>
 <body>
     <!-- Navigation Header -->
