--- a/toolkit.html
+++ b/toolkit.html
@@ -384,7 +384,7 @@
       }
     }
   </style>
-  <link rel="icon" type="image/png" href="images/logos/3N Consulting.png>
+  <link rel="icon" type="image/png" href="images/logos/3N%20Consulting.png">
 </head>
 <body>
 <div class=" site-wrapper">
