--- a/careers2.html
+++ b/careers2.html
@@ -386,7 +386,7 @@
       transform: translateY(-1px) !important;
     }
   </style>
-  <link rel="icon" type="image/png" href="images/logos/3N Consulting.png>
+  <link rel="icon" type="image/png" href="images/logos/3N%20Consulting.png">
 </head>
 <body>
 <div class=" site-wrapper">
