--- a/case-studies.html
+++ b/case-studies.html
@@ -295,7 +295,7 @@
             }
         }
     </style>
-    <link rel="icon" type="image/png" href="images/logos/3N Consulting.png>
+    <link rel="icon" type="image/png" href="images/logos/3N%20Consulting.png">
 </head>
 <body>
     <!-- Navigation Header -->
