--- a/manufacturing.html
+++ b/manufacturing.html
@@ -385,7 +385,7 @@
       height: auto;
     }
   </style>
-  <link rel="icon" type="image/png" href="images/logos/3N Consulting.png>
+  <link rel="icon" type="image/png" href="images/logos/3N%20Consulting.png">
 </head>
 
 <body>
