--- a/procurement.html
+++ b/procurement.html
@@ -374,7 +374,7 @@
       height: auto;
     }
   </style>
-  <link rel="icon" type="image/png" href="images/logos/3N Consulting.png>
+  <link rel="icon" type="image/png" href="images/logos/3N%20Consulting.png">
 </head>
 
 <body>
