--- a/strategy-operations.html
+++ b/strategy-operations.html
@@ -339,7 +339,7 @@
       height: auto;
     }
   </style>
-  <link rel="icon" type="image/png" href="images/logos/3N Consulting.png>
+  <link rel="icon" type="image/png" href="images/logos/3N%20Consulting.png">
 </head>
 
 <body>
